Adds nox.OSGi, bundle and preliminary create support